# BNG3

./: .gitignore  AGENTS.md  BNG3_overcount_analysis.md  BNG3_unification_spec.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: autofix.yml  ci.yml  nightly.yml  weekly.yml
benchmarks/: README.md  run_benchmarks.py
cpp/: CMakeLists.txt  CMakeLists.unify.snippet.cmake
cpp/actions/: ActionDispatch.cpp
cpp/ast/: Expression.cpp  ExpressionEval.hpp  Model.cpp  Model.hpp  SpeciesGraph.cpp  SpeciesGraph.hpp
cpp/bindings/: bind_engine.cpp  bind_model.cpp  bind_nfsim.cpp  bind_viz.cpp  module.cpp
cpp/core/: BNGcore.hpp
cpp/engine/: OdeIntegrator.cpp  OdeIntegrator.hpp
cpp/io/: NetWriter.cpp  NetWriter.hpp  TfunReader.hpp
cpp/nauty/: nauty.h
cpp/nauty/nauty24/: nauty.h
cpp/nfsim/: NFsim.hh
cpp/nfsim/NFcore/: NFcore.hh
cpp/nfsim/NFfunction/: funcParser.cpp
cpp/nfsim/NFfunction/muParser/: muParser.cpp  muParserBase.h  muParserComplex.cpp
cpp/nfsim/NFinput/: NFinput_fromAst.cpp  NFinput_fromAst.hh  commandLineParser.cpp
cpp/nfsim/NFreactions/reactantLists/: reactantList.cpp  reactantList.hh  reactantTree.cpp  reactantTree.hh
cpp/nfsim/NFreactions/reactions/: DORreaction.cpp  reaction.cpp
cpp/nfsim/NFscheduler/: Scheduler.cpp  Scheduler.h
cpp/nfsim/nauty24/: nauty.h
cpp/parser/: BNGAstVisitor.cpp  BNGAstVisitor.hpp  BNGLexer.g4  BNGParser.g4
docs/: api_reference.md  cli_reference.md  migration_guide.md  user_guide.md
models/: Motivating_example_cBNGL.bngl
models/actin/: README.txt
models/chemotaxisAdaptation/: README.txt
models/fceRI_compendium/: README.txt
models/flagellar_motor/: README.txt
models/multisite_phos/: README.txt
models/oscillatory_system/: README.txt
models/performance_test_models/: ANx_noActivity.ka
models/simple_PushPull/: README.txt
models/tlbr/: README.txt
python/bionetgen/: __init__.py  _bionetgen_cpp.pyi  builder.py  cli.py  display.py  main.py  model.py  result.py  sbml.py  scan.py  sensitivity.py  viz.py
python/bionetgen/atomizer/utils/: smallStructures.py
python/bionetgen/compat/: legacy_runner.py
python/bionetgen/core/: defaults.py  main.py
python/bionetgen/core/tools/: cli.py  gdiff.py  plot.py  result.py
python/bionetgen/modelapi/: __init__.py  bngparser.py  runner.py  xmlparsers.py
python/bionetgen/network/: network.py  networkparser.py
python/bionetgen/simulator/: simulators.py
scripts/: check_localfunc_rates.py  regen_golden.py  validate.py  validate_io_roundtrip.py  validate_nfsim.py  validate_ratelaws.py  validate_sbml.py  validate_trajectories.py
tests/: __init__.py
tests/cpp/: CMakeLists.txt  localfunc_test.cpp  test_compartment_transport.cpp  test_expression_evaluator.cpp  test_hnauty.cpp  test_hybrid_model_generator.cpp  test_network_generator.cpp  test_pla_simulator.cpp  test_reaction_rule_expansion.cpp  test_ullmann.cpp
tests/python/: conftest.py  test_analyzeSBML.py  test_bionetgen.py  test_bng_atomizer.py  test_bng_atomizer_comb.py  test_bng_core.py  test_bng_models.py  test_bng_parsing.py  test_bng_visualization.py  test_bngl_writer.py  test_builder.py  test_cli.py  test_cpp_backend.py  test_detect_ontology.py  test_display.py  test_get_rule_mod.py  test_get_version_json.py  test_parameter_scan.py  test_pathwaycommons.py  test_result.py  test_sbml2json.py  test_sbml_import.py  test_sensitivity.py  test_viz_export.py
tests/python/test/: test.gdat  test.net  test.xml
tests/python/viz/: test_contactmap.graphml  test_regulatory.graphml  test_ruleviz_operation.graphml  test_ruleviz_pattern.graphml
tests/validation/: README.md  compare.py  conftest.py  corpus.py  oracle_nfsim.py  oracle_perl.py  pytest.ini  runner.py  test_export_formats.py  test_parity_expressions.py  test_parity_net.py  test_parity_nfsim.py  test_parity_ode.py  test_parity_stochastic.py
tests/validation/Validate/: test_write_sbml_multi_sbml_sbmlmulti.xml  visualize_compact.graphml  visualize_contactmap.graphml  visualize_conventional.graphml  visualize_regulatory_1.graphml  visualize_regulatory_2.graphml  visualize_regulatory_3.graphml  visualize_regulatory_4.graphml
tests/validation/Validate/nfkb_illustrating_protocols_R/: nfkb_illustrating_protocols_R_00001.gdat  nfkb_illustrating_protocols_R_00001.net  nfkb_illustrating_protocols_R_00002.gdat  nfkb_illustrating_protocols_R_00002.net  nfkb_illustrating_protocols_R_00003.gdat  nfkb_illustrating_protocols_R_00003.net  nfkb_illustrating_protocols_R_00004.gdat  nfkb_illustrating_protocols_R_00004.net
tests/validation/Validate/test_ANG_parscan_synthesis_simple_dummy/: test_ANG_parscan_synthesis_simple_dummy_00001.net  test_ANG_parscan_synthesis_simple_dummy_00002.net
