[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "bionetgen"
version = "3.0.0a1"
description = "Rule-based modeling platform for biochemical reaction systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "BioNetGen Development Team"},
]
keywords = ["bionetgen", "systems biology", "rule-based modeling", "stochastic simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.20",
    "click>=8.0",
]

[project.optional-dependencies]
legacy = [
    "cement",
    "colorlog",
    "pyparsing",
    "pylru",
]
plotting = [
    "pandas>=1.3",
    "matplotlib>=3.4",
]
full = [
    "bionetgen[legacy,plotting]",
    "seaborn",
    "xmltodict",
    "pyyaml",
    "lxml",
    "networkx",
    "python-libsbml",
    "sympy",
]
dev = [
    "bionetgen[full]",
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
bionetgen = "bionetgen.cli:main"

[project.urls]
Homepage = "https://bionetgen.org"
Repository = "https://github.com/RuleWorld/bionetgen"

[tool.scikit-build]
wheel.packages = ["python/bionetgen"]
cmake.args = ["-DBUILD_TESTS=OFF", "-DBUILD_CLI=OFF"]
cmake.build-type = "Release"
install.components = ["python"]

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = "ON"
BUILD_CLI = "OFF"
BUILD_TESTS = "OFF"

[tool.ruff]
target-version = "py39"
extend-exclude = [
    "python/bionetgen/assets/",
    "python/bionetgen/atomizer/",
]

[tool.ruff.lint]
select = ["F401", "F841"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**" = ["F841", "F401"]
"python/bionetgen/core/**" = ["F841"]
"python/bionetgen/modelapi/**" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
